--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="theme-color" content="#000000">
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-
-    <title>Youtube Party - by Bram van der Giessen</title>
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+    <title>SoundChat</title>
   </head>
   <body>
     <noscript>
